# bambu-lab-monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
backend/: server.py
backend/templates/: index.html
public/: floating.html
src/: App.tsx  floating.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  floating.json
src-tauri/src/: lib.rs  main.rs  python_backend.rs  server.rs
src-tauri/src/storage/: mod.rs
src/components/: AmsGrid.tsx  Header.tsx  LoadingScreen.tsx  ProgressHero.tsx  SettingsModal.tsx  Stats.tsx  TempGauges.tsx
src/hooks/: usePrinter.ts
src/stores/: appStore.ts
