[package]
name = "bambu-monitor"
version = "0.1.0"
description = "Bambu Lab Printer Monitor — Single Binary (no Python)"
authors = ["David"]
edition = "2021"

[lib]
name = "bambu_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

# HTTP server: pure std::net::TcpListener (no external crate needed)

# MQTT client
rumqttc = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for polling
reqwest = { version = "0.12", features = ["json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = "0.4"

# UUID for MQTT client ID
uuid = { version = "1", features = ["v4"] }

# Async stream for mqtt_loop
async-stream = "0.3"
futures-util = "0.3"
