[package]
name = "bambu-monitor"
version = "0.1.0"
description = "Bambu Lab Printer Monitor — Single Binary (no Python)"
authors = ["David"]
edition = "2021"

[lib]
name = "bambu_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

# HTTP server: pure std::net::TcpListener (no external crate needed)

# MQTT client — use rustls
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

# TLS dependencies for custom cert verification
rustls = "0.22"




# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for polling
reqwest = { version = "0.12", features = ["json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = "0.4"

# UUID for MQTT client ID
uuid = { version = "1", features = ["v4"] }

# Async stream for mqtt_loop
async-stream = "0.3"
futures-util = "0.3"

# HTTP server (axum)
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching & config
directories = "5"
thiserror = "1"
once_cell = "1"

# Native macOS API for NSPanel manipulation.
# objc2 0.6.4 matches the version Tauri v2.10.3 uses internally.
# Using explicit version forces Cargo to use ONE instance across all crates.
objc2 = "0.6"
features = ["std"]
default-features = false

# objc2-app-kit 0.3.x provides NSWindow/NSColor Rust bindings.
# Its internal objc2 dependency is shadowed by the explicit 0.6 above.
objc2-app-kit = "0.3"
features = ["NSApplication", "NSColor", "NSResponder", "NSView", "NSWindow", "NSImage"]
default-features = false

