[package]
name = "bambu-monitor"
version = "0.1.0"
description = "Bambu Lab Printer Monitor — Single Binary (no Python)"
authors = ["David"]
edition = "2021"

[lib]
name = "bambu_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
libc = "0.2"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSColor"] }

tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

# HTTP server: pure std::net::TcpListener (no external crate needed)

# MQTT client — use rustls
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }

# TLS dependencies for custom cert verification
rustls = "0.22"




# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for polling
reqwest = { version = "0.12", features = ["json"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Time
chrono = "0.4"

# UUID for MQTT client ID
uuid = { version = "1", features = ["v4"] }

# Async stream for mqtt_loop
async-stream = "0.3"
futures-util = "0.3"

# HTTP server (axum)
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching & config
directories = "5"
thiserror = "1"
once_cell = "1"

# Native macOS API for NSPanel manipulation.
# Uses Tauri-internal objc2 types via cargo's dependency unification.
# No additional crates needed — Tauri already bundles objc2 0.6 and objc2-app-kit 0.3.

